--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container container-last">
 			<div class="left-content">
 				<div class="left-title">
 					<p class="under-title">some recent projects</p>
